# cloudrun

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  build.sh  entrypoint.sh  get_latest_branches.sh  pyproject.toml  requirements.txt  setup.py  test_cloudrun.py  test_script.py
aws_cloudrun/: setup.py
cloudrun/: __init__.py  cli.py  setup.py
cloudrun/docker/: Dockerfile  entrypoint.sh
src/: test.py
src/cloudrun/: __init__.py  _infrastructure.py  cli.py  config.py  infrastructure.py  lambda_function_template.py  logger.py  scheduler.py  setup.py
src/cloudrun/docker/: Dockerfile  entrypoint.sh  requirements.txt
tests/: __init__.py  test_run.py  test_setup.py
