[build-system]
requires = ["setuptools>=61.0", "boto3", "python-dotenv", "click"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudrun"
version = "0.1.0"
authors = [
    { name = "Jon Clegg" }
]
description = "Run Python scripts in AWS Fargate"
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.26.0",
    "python-dotenv>=0.19.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
cloudrun = "cloudrun.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cloudrun*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 